name:           mangopay
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         JP Moresmau <jpmoresmau@gmail.com>
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2014 ProwdFunder
category:       Web
homepage:       https://github.com/loyful/mangopay
synopsis:       Bindings to the mangopay API

source-repository head
  type:      git
  location:  git://github.com/loyful/mangopay.git

flag debug
  default:      False
  description:  Print debugging info.

library
  hs-source-dirs:   src
  build-depends:    
     base >= 4
     , bytestring           >= 0.9     && < 0.11
     , text                 == 0.11.*
     , transformers         >= 0.2     && < 0.4
     , transformers-base
     , monad-control
     , resourcet
     , conduit              == 1.0.*
     , http-types
     , http-conduit         == 2.0.*
     , attoparsec           >= 0.10 && < 0.12
     , attoparsec-conduit   == 1.0.*
     , aeson                >= 0.5  && < 0.8
     , time
     , data-default
     , lifted-base
     , unordered-containers
     , base16-bytestring
     , primitive == 0.5.1.0
     , utf8-string >=0.3.7 && <0.4
  ghc-options:      -Wall
  other-modules:    
                   Web.Mangopay.Types,
                   Web.Mangopay.Monad,
                   Web.Mangopay.Access,
                   Web.Mangopay.Users,
                   Web.Mangopay.Events,
                   Web.Mangopay.Wallets
  exposed-modules:  Web.Mangopay

  if flag(debug)
    cpp-options:  -DDEBUG

executable mangopay-passphrase
  build-depends:   
     base >= 4
     , mangopay
     , bytestring           >= 0.9     && < 0.11
     , text                 == 0.11.*
     , transformers         >= 0.2     && < 0.4
     , transformers-base
     , monad-control
     , resourcet
     , conduit              == 1.0.*
     , http-types
     , http-conduit         == 2.0.*
     , attoparsec           >= 0.10 && < 0.12
     , attoparsec-conduit   == 1.0.*
     , aeson                >= 0.5  && < 0.8
     , time
     , data-default
     , lifted-base
     , unordered-containers
     , base16-bytestring
     , utf8-string >=0.3.7 && <0.4
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  exe
  main-is:         Main.hs
  if flag(debug)
    cpp-options:  -DDEBUG

test-suite mangopay-tests
  type:            exitcode-stdio-1.0
  main-is:         mangopay-tests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
     base >= 4, HTF > 0.9
     , mangopay
     , bytestring           >= 0.9     && < 0.11
     , text                 == 0.11.*
     , transformers         >= 0.2     && < 0.4
     , transformers-base
     , monad-control
     , resourcet
     , conduit              == 1.0.*
     , http-types
     , http-conduit         == 2.0.*
     , attoparsec           >= 0.10 && < 0.12
     , attoparsec-conduit   == 1.0.*
     , aeson                >= 0.5  && < 0.8
     , time
     , data-default
     , lifted-base
     , unordered-containers
     , base16-bytestring
     , HUnit >=1.2.5 && <1.3
     , utf8-string >=0.3.7 && <0.4
  other-modules:   
                  Web.Mangopay.Users,
                  Web.Mangopay.UsersTest,
                  Web.Mangopay.TestUtils,
                  Web.Mangopay.Events,
                  Web.Mangopay.Wallets,
                  Web.Mangopay.WalletsTest
  hs-source-dirs:  
                  test,
                  src
  if flag(debug)
    cpp-options:  -DDEBUG
